--- a/.github/CHANGETHIS/deploy-prod.yml
+++ b/.github/CHANGETHIS/deploy-prod.yml
@@ -1,1 +1,11 @@
-name: Production deployment
+env:
+  AZURE_RESOURCE_GROUP: cd-with-actions
+  AZURE_APP_PLAN: actions-ttt-deployment
+  AZURE_LOCATION: '"Central US"'
+  #################################################
+  ### USER PROVIDED VALUES ARE REQUIRED BELOW   ###
+  #################################################
+  #################################################
+  ### REPLACE USERNAME WITH GH USERNAME         ###
+  AZURE_WEBAPP_NAME: xinkai-yang-ttt-app
+  #################################################
